# recode-video

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.devcontainer/: Dockerfile
src/recode_video/: __main__.py  recode_video.py
src/recode_video/cli/: __init__.py
tests/: __init__.py
